--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div id="container">
-                <form id="log-in-form" action="" method="POST">
+                <form onsubmit="submitLoginForm(event)" id="log-in-form" action="#" method="POST">
                     <div class="label-container">
                         <h2 id="sign-in-text"></h1>
                     </div>
